Fix offset when tests run so sticky bar doesnt overlap the sequence name.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -272,6 +272,12 @@ body {
   padding-left: 40px;
 }
 
+.sequence-anchor {
+  display: block;
+  position:relative;
+  top: -50px;
+}
+
 .sequence-score {
   font-size: 20px;
   color: white;
